config-root/namespaces/jx-production/quickstart/quickstart-quickstart-deploy.yaml
# Source: quickstart/templates/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: quickstart-quickstart
  labels:
    draft: draft-app
    chart: "quickstart-0.0.1"
    gitops.jenkins-x.io/pipeline: 'namespaces'
  namespace: jx-production
  annotations:
    wave.pusher.com/update-on-config-change: 'true'
spec:
  selector:
    matchLabels:
      app: quickstart-quickstart
  replicas: 1
  template:
    metadata:
      labels:
        draft: draft-app
        app: quickstart-quickstart
    spec:
      serviceAccountName: quickstart-quickstart
      containers:
        - name: quickstart
          image: "gcr.io/artful-zone-312202/quickstart:0.0.1"
          imagePullPolicy: IfNotPresent
          envFrom: null
          ports:
            - name: http
              containerPort: 8080
          livenessProbe:
            httpGet:
              path: /
              port: 8080
            initialDelaySeconds: 60
            periodSeconds: 10
            successThreshold: 1
            timeoutSeconds: 1
          readinessProbe:
            httpGet:
              path: /
              port: 8080
            periodSeconds: 10
            successThreshold: 1
            timeoutSeconds: 1
          resources:
            limits:
              cpu: 400m
              memory: 256Mi
            requests:
              cpu: 200m
              memory: 128Mi
      terminationGracePeriodSeconds:
      imagePullSecrets:
