config-root/namespaces/jx-production/quickstart/quickstart-svc.yaml
# Source: quickstart/templates/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: quickstart
  labels:
    chart: "quickstart-0.0.2"
    gitops.jenkins-x.io/pipeline: 'namespaces'
  namespace: jx-production
spec:
  type: ClusterIP
  ports:
    - port: 80
      targetPort: 8080
      protocol: TCP
      name: http
  selector:
    app: quickstart-quickstart
