config-root/namespaces/jx-production/quickstart/quickstart-ingress.yaml
# Source: quickstart/templates/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: nginx
  name: quickstart
  namespace: jx-production
  labels:
    gitops.jenkins-x.io/pipeline: 'namespaces'
spec:
  rules:
    - http:
        paths:
          - backend:
              serviceName: quickstart
              servicePort: 80
      host: quickstart-jx-production.35.193.120.113.nip.io
